--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -552,9 +552,53 @@ body.dark-theme {
 
 
 /*=============== PROJECTS ===============*/
+.projects__container{
+  overflow: initial;
+}
+
+.projects__content{
+  display: grid;
+  justify-content: center;
+}
+
+.projects__img{
+  width: 250px;
+  border-radius: .75rem;
+  margin-bottom: 1.25rem;
+}
+
+.projects__subtitle{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.projects__title{
+  font-size: var(--h2-font-size);
+  margin-bottom: 1.25rem;
+  margin: .5rem 0 1.25rem;
+}
+
+.projects__button{
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  color: var(--title-color);
+  font-size: var(--small-font-size);
+}
+
+.projects__button i{
+  font-size: 1rem;
+  transition: transform .3s;
+}
+
+.projects__button:hover i{
+  transform: translateX(.25rem);
+}
 
 
 /* Swiper class */
+
+
 
 
 /*=============== TESTIMONIAL ===============*/
