--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -295,8 +295,12 @@ body.dark-theme {
 
 /*=============== HOME ===============*/
 .home__container{
-  row-gap: 4rem;
+  /* row-gap: 4rem; */
   /* padding-top: 2rem; */
+   display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 2rem;
 }
 
 .home__data{
@@ -311,6 +315,7 @@ body.dark-theme {
 }
 
 .home__blob{
+  display: grid;
   position: relative;
   width: 200px;
   height: 290px;
@@ -320,6 +325,7 @@ body.dark-theme {
   border-radius: 6.25rem;
   place-items: center;
   transition: background .4s; /* for dark mode animation */
+  animation: slideDownFade 0.8s cubic-bezier(.77,0,.18,1) both;
 }
 
 .home__perfil{
@@ -402,6 +408,17 @@ body.dark-theme {
   font-weight: var(--font-semi-bold);
 }
 
+/* Animación de entrada para home__blob */
+@keyframes slideDownFade {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 /*=============== SKILLS ===============*/
 .skills__container{
@@ -988,11 +1005,17 @@ body.dark-theme {
 
 @media screen and (min-width: 767px){
   .home__container{
-    grid-template-columns: 1fr 2fr 1fr;
+    /* grid-template-columns: 1fr 2fr 1fr; */
+    grid-template-columns: 1fr;
+    text-align: center;
   }
 
   .home__data{
     order: 2;
+  }
+
+  .home__blob {
+        justify-self: center;
   }
 
   .home__info:nth-child(3){
@@ -1114,7 +1137,7 @@ body.dark-theme {
   }
 
   .skills__container{
-    grid-template-columns: repeat(3,max-content);
+    grid-template-columns: repeat(2,max-content);
     column-gap: 2.5rem;
   }
 
@@ -1196,7 +1219,7 @@ body.dark-theme {
   } */
 
   .skills__container{
-    grid-template-columns: repeat(3,max-content);
+    grid-template-columns: repeat(2,max-content);
     column-gap: 6rem;
   }
 
