--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1003,7 +1003,7 @@ body.dark-theme {
 
 }
 
-@media screen and (min-width: 767px){
+@media screen and (max-width: 767px){
   .home__container{
     /* grid-template-columns: 1fr 2fr 1fr; */
     grid-template-columns: 1fr;
